fix: unselect after multi-select releases and attached variants release (#209)
